@@ -4,7 +4,8 @@ qtwebkit (2.2.1-2) UNRELEASED; urgency=low
   * Build with -gstabs on armhf instead of -g, like armel.
 
   [ Pino Toscano ]
-  * glibc_mkspec.diff: rename to glibc_hurd_mkspecs.diff.
+  * glibc_mkspec.diff: rename to glibc_hurd_mkspecs.diff, and extend to
+    apply also to the hurd-g++ mkspec.
 
  -- Fathi Boudra <fabo@debian.org>  Tue, 01 May 2012 15:07:39 +0300
 
